{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 22,
  "lineage": "3a565e13-f00a-e2d3-5fe1-b52dff1f319b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4b8d1bfe912bad",
            "domain": "vpc",
            "id": "eipalloc-05e4b8d1bfe912bad",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-232-238-74.compute-1.amazonaws.com",
            "public_ip": "34.232.238.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:internet-gateway/igw-031cb18a40888b4e2",
            "id": "igw-031cb18a40888b4e2",
            "owner_id": "339712875111",
            "tags": {
              "Name": "iGW-eks"
            },
            "tags_all": {
              "Name": "iGW-eks"
            },
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e4b8d1bfe912bad",
            "association_id": "eipassoc-03fb724ad80bc3870",
            "connectivity_type": "public",
            "id": "nat-099b8cc0a83d1d4d3",
            "network_interface_id": "eni-05596d357af86d6d9",
            "private_ip": "10.0.0.51",
            "public_ip": "34.232.238.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0627fd9c6edc353ca",
            "tags": {
              "Name": "gw-NAT"
            },
            "tags_all": {
              "Name": "gw-NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip_asso",
            "aws_subnet.pub_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:route-table/rtb-0588a294e6ac9a59e",
            "id": "rtb-0588a294e6ac9a59e",
            "owner_id": "339712875111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-099b8cc0a83d1d4d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pri_route_table"
            },
            "tags_all": {
              "Name": "Pri_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_asso",
            "aws_nat_gateway.ngw",
            "aws_subnet.pub_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:route-table/rtb-095d9d429f2e1580f",
            "id": "rtb-095d9d429f2e1580f",
            "owner_id": "339712875111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031cb18a40888b4e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route_eks"
            },
            "tags_all": {
              "Name": "pub_route_eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub1_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff1ca439598c3e1",
            "route_table_id": "rtb-0588a294e6ac9a59e",
            "subnet_id": "subnet-0e1e6b56e51a66304"
          },
          "dependencies": [
            "aws_eip.eip_asso",
            "aws_nat_gateway.ngw",
            "aws_route_table.pri_route",
            "aws_subnet.pri_subnet1",
            "aws_subnet.pub_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub2_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c265386e3979f4bc",
            "route_table_id": "rtb-0588a294e6ac9a59e",
            "subnet_id": "subnet-0b3a0645c4f72a83b"
          },
          "dependencies": [
            "aws_eip.eip_asso",
            "aws_nat_gateway.ngw",
            "aws_route_table.pri_route",
            "aws_subnet.pri_subnet2",
            "aws_subnet.pub_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub1_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df7ad62dad22f4de",
            "route_table_id": "rtb-095d9d429f2e1580f",
            "subnet_id": "subnet-0627fd9c6edc353ca"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_route",
            "aws_subnet.pub_subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub2_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089da85f09c8166f6",
            "route_table_id": "rtb-095d9d429f2e1580f",
            "subnet_id": "subnet-0d2274a6f870151e8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_route",
            "aws_subnet.pub_subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_sg_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:security-group/sg-0cafc51590f4edd80",
            "description": "all_sg",
            "egress": [],
            "id": "sg-0cafc51590f4edd80",
            "ingress": [],
            "name": "all_sg",
            "name_prefix": "",
            "owner_id": "339712875111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "all_sg_eks"
            },
            "tags_all": {
              "Name": "all_sg_eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:subnet/subnet-0e1e6b56e51a66304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e6b56e51a66304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712875111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-01"
            },
            "tags_all": {
              "Name": "Private-subnet-01"
            },
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:subnet/subnet-0b3a0645c4f72a83b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3a0645c4f72a83b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712875111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet-01"
            },
            "tags_all": {
              "Name": "Private-subnet-01"
            },
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:subnet/subnet-0627fd9c6edc353ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0627fd9c6edc353ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712875111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-01"
            },
            "tags_all": {
              "Name": "Public-subnet-01"
            },
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:subnet/subnet-0d2274a6f870151e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2274a6f870151e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712875111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-subnet-02"
            },
            "tags_all": {
              "Name": "Public-subnet-02"
            },
            "vpc_id": "vpc-0f98da2bbb8f25292"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:vpc/vpc-0f98da2bbb8f25292",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0456b14fc463a54ac",
            "default_route_table_id": "rtb-02bc4618bc6be188b",
            "default_security_group_id": "sg-02f01b41b536cb47b",
            "dhcp_options_id": "dopt-03a809c401d7ce6c7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f98da2bbb8f25292",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02bc4618bc6be188b",
            "owner_id": "339712875111",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "out_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:security-group-rule/sgr-0820db117fb75029f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0820db117fb75029f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cafc51590f4edd80",
            "security_group_rule_id": "sgr-0820db117fb75029f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_sg_eks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inb_rule_all_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712875111:security-group-rule/sgr-072f282726c0af8fa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all traffic for all ports",
            "from_port": 0,
            "id": "sgr-072f282726c0af8fa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cafc51590f4edd80",
            "security_group_rule_id": "sgr-072f282726c0af8fa",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_sg_eks",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}